# rush

./: .pre-commit-config.yaml  Bakefile  Pipfile  README.md  he.txt1  pyproject.toml  requirements.txt  rushfile.yml  scraps.py  script.sh
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
.github/workflows/: pythonpublish.yml
phenol/: phenol.yml  script.py  utils.py
rush/: __init__.py  cli.py  he.txt1  rushfile.yml  scraps.py  script.py  tempCodeRunnerFile.py  utils.py
rush_cli/: cli.py  prep_tasks.py  read_tasks.py  run_tasks.py  scraps.py  script.py  utils.py  viewconfig.py
tests/: test_prep_tasks.py  test_read_tasks.py  test_utils.py
