[tool.poetry]
name = "rush-cli"
version = "0.4.1"
description = "Minimalistic bash task runner"
authors = ["rednafi <redowan.nafi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
colorama = "^0.4.3"
pyyaml = "^5.2"
pretty_errors = "^1.2.7"
pygments = "^2.5.2"
click_help_colors = "^0.6"


[tool.poetry.scripts]
rush = 'rush_cli.cli:entrypoint'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
