[tool.poetry]
name = "rush-cli"
version = "0.5.7"
description = "♆ Rush: A Minimalistic Bash Utility"
authors = ["rednafi <redowan.nafi@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rednafi/rush"
keywords = ["cli", "bash", "task", "manager", "runner"]

[tool.poetry.dependencies]
python = "^3.5"
click = "^7.0"
colorama = "^0.4.3"
pyyaml = "^5.2"
pygments = "^2.5.2"
click_help_colors = "^0.6"

[tool.poetry.scripts]
rush = "rush_cli.cli:entrypoint"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
mock = "^3.0.5"
pretty_errors = "^1.2.7"
pytest-cov = "^2.8.1"
pytest-subprocess = "^0.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
